<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/log_in_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightyellow" >

    <RelativeLayout
        android:id="@+id/ceng1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/showscore_height"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/dia_team1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/score_marginleft"
            android:paddingTop="@dimen/score_paddingtop"
            android:text="@string/TeamFeng"
            android:textSize="@dimen/stupid_amazing_textsize2" />

        <TextView
            android:id="@+id/dia_team1_score"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignBottom="@id/dia_team1"
            android:layout_alignTop="@id/dia_team1"
            android:layout_marginLeft="@dimen/score_marginleft1"
            android:layout_marginRight="@dimen/score_marginleft"
            android:layout_toRightOf="@+id/dia_team1"
            android:paddingTop="@dimen/score_paddingtop"
            android:textSize="@dimen/stupid_amazing_textsize2" />

        <ImageView
            android:id="@+id/scoredec1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignBottom="@id/dia_team1_score"
            android:layout_alignTop="@id/dia_team1"
            android:layout_marginRight="@dimen/score_marginleft1"
            android:layout_toRightOf="@id/dia_team1_score"
            android:contentDescription="@string/app_name"
            android:src="@drawable/decend" />

        <ImageView
            android:id="@+id/scoreadd1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignBottom="@id/scoredec1"
            android:layout_alignTop="@id/scoredec1"
            android:layout_marginRight="@dimen/score_marginleft1"
            android:layout_toRightOf="@id/scoredec1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/add" />

        <TextView
            android:id="@+id/dia_team2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/dia_team1"
            android:layout_marginLeft="@dimen/score_marginleft"
            android:paddingTop="@dimen/score_paddingtop"
            android:text="@string/TeamSha"
            android:textSize="@dimen/stupid_amazing_textsize2" />

        <TextView
            android:id="@+id/dia_team2_score"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignBottom="@id/dia_team2"
            android:layout_alignTop="@id/dia_team2"
            android:layout_marginLeft="@dimen/score_marginleft1"
            android:layout_marginRight="@dimen/score_marginleft"
            android:layout_toRightOf="@id/dia_team2"
            android:paddingTop="@dimen/score_paddingtop"
            android:textSize="@dimen/stupid_amazing_textsize2" />

        <ImageView
            android:id="@+id/scoredec2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignBottom="@+id/dia_team2_score"
            android:layout_alignTop="@id/dia_team2_score"
            android:layout_marginRight="@dimen/score_marginleft1"
            android:layout_toRightOf="@id/dia_team2_score"
            android:contentDescription="@string/app_name"
            android:src="@drawable/decend" />

        <ImageView
            android:id="@+id/scoreadd2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/score_height"
            android:layout_alignBottom="@id/scoredec2"
            android:layout_alignTop="@id/scoredec2"
            android:layout_marginRight="@dimen/score_marginleft1"
            android:layout_toRightOf="@id/scoredec2"
            android:contentDescription="@string/app_name"
            android:src="@drawable/add" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/score_changesave_height"
        android:layout_below="@id/ceng1"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cancle"
            android:layout_width="@dimen/score_changesavebutton_width"
            android:layout_height="@dimen/score_changesave_height"
            android:layout_marginLeft="@dimen/score_cancle_marginleft"
            android:layout_marginRight="@dimen/score_cancle_marginright"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/cancle" />

        <ImageView
            android:id="@+id/sure"
            android:layout_width="@dimen/score_changesavebutton_width"
            android:layout_height="@dimen/score_changesave_height"
            android:layout_marginRight="@dimen/score_sure_marginright"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sure" />
    </LinearLayout>

</RelativeLayout>